--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -243,7 +243,16 @@ services:
   init-permissions:
     image: busybox:1.37.0
     volumes:
-      - ./volumes/redis/data:/data
+      - oradata:/data/oradata:z
+      - dify_es01_data:/data/dify_es01_data:z
+      - redis_data:/data/redis_data:z
+      - storage_data:/data/storage_data:z
+      - certbot_data_conf:/data/certbot_data_conf:z
+      - certbot_data_www:/data/certbot_data_www:z
+      - certbot_data_logs:/data/certbot_data_logs:z
+      - certbot_data_conf_live:/data/certbot_data_conf_live:z
+      - pgvector_data:/data/pgvector_data:z
+      - db_data:/data/db_data:z
 
   ollama:
     image: ollama/ollama:0.3.14
@@ -251,7 +260,7 @@ services:
     ports:
       - 11434:11434
     volumes:
-      - ./volumes/ollama:/root/.ollama
+      - ./volumes/ollama:/root/.ollama:z
 
   # API service
   api:
@@ -268,7 +277,7 @@ services:
     volumes:
       # Mount the storage directory to the container, for storing user files.
       # - ./volumes/app/storage:/app/api/storage
-      - storage_data:/app/api/storage
+      - storage_data:/app/api/storage:z
     networks:
       - ssrf_proxy_network
       - default
@@ -289,7 +298,7 @@ services:
     volumes:
       # Mount the storage directory to the container, for storing user files.
       # - ./volumes/app/storage:/app/api/storage
-      - storage_data:/app/api/storage
+      - storage_data:/app/api/storage:z
     networks:
       - ssrf_proxy_network
       - default
@@ -323,7 +332,7 @@ services:
                -c 'effective_cache_size=${POSTGRES_EFFECTIVE_CACHE_SIZE:-4096MB}'
     volumes:
       # - ./volumes/db/data:/var/lib/postgresql/data
-      - db_data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data:z
     healthcheck:
       test: ["CMD", "pg_isready"]
       interval: 1s
@@ -333,6 +342,7 @@ services:
   # The redis cache.
   redis:
     # image: redis:6-alpine
+    user: "root"
     depends_on:
       - init-permissions
     image: bitnami/redis:7.4.1
@@ -340,7 +350,7 @@ services:
     volumes:
       # Mount the redis data directory to the container.
       # - ./volumes/redis/data:/data
-      - redis_data:/data
+      - redis_data:/data:z
     # Set the redis password when startup redis server.
     command: redis-server --requirepass ${REDIS_PASSWORD:-difyai123456}
     healthcheck:
@@ -376,7 +386,7 @@ services:
     image: ubuntu/squid:6.6-24.04_edge
     restart: always
     volumes:
-      - ./ssrf_proxy/squid.conf.template:/etc/squid/squid.conf.template
+      - ./ssrf_proxy/squid.conf.template:/etc/squid/squid.conf.template:z
       - ./ssrf_proxy/docker-entrypoint.sh:/docker-entrypoint-mount.sh
     entrypoint:
       [
@@ -407,10 +417,10 @@ services:
       # - ./volumes/certbot/logs:/var/log/letsencrypt
       # - ./volumes/certbot/conf/live:/etc/letsencrypt/live
 
-      - certbot_data_conf:/etc/letsencrypt
-      - certbot_data_www:/var/www/html
-      - certbot_data_logs:/var/log/letsencrypt
-      - certbot_data_conf_live:/etc/letsencrypt/live
+      - certbot_data_conf:/etc/letsencrypt:z
+      - certbot_data_www:/var/www/html:z
+      - certbot_data_logs:/var/log/letsencrypt:z
+      - certbot_data_conf_live:/etc/letsencrypt/live:z
 
       - ./certbot/update-cert.template.txt:/update-cert.template.txt
       - ./certbot/docker-entrypoint.sh:/docker-entrypoint.sh
@@ -431,15 +441,15 @@ services:
       - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
       - ./nginx/proxy.conf.template:/etc/nginx/proxy.conf.template
       - ./nginx/https.conf.template:/etc/nginx/https.conf.template
-      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/conf.d:/etc/nginx/conf.d:z
       - ./nginx/docker-entrypoint.sh:/docker-entrypoint-mount.sh
-      - ./nginx/ssl:/etc/ssl # cert dir (legacy)
+      - ./nginx/ssl:/etc/ssl:z # cert dir (legacy)
       # - ./volumes/certbot/conf/live:/etc/letsencrypt/live # cert dir (with certbot container)
       # - ./volumes/certbot/conf:/etc/letsencrypt
       # - ./volumes/certbot/www:/var/www/html
-      - certbot_data_conf_live:/etc/letsencrypt/live # cert dir (with certbot container)
-      - certbot_data_conf:/etc/letsencrypt
-      - certbot_data_www:/var/www/html
+      - certbot_data_conf_live:/etc/letsencrypt/live:z # cert dir (with certbot container)
+      - certbot_data_conf:/etc/letsencrypt:z
+      - certbot_data_www:/var/www/html:z
     entrypoint: [
         "sh",
         "-c",
@@ -479,7 +489,7 @@ services:
     restart: always
     volumes:
       # Mount the Weaviate data directory to the con tainer.
-      - ./volumes/weaviate:/var/lib/weaviate
+      - ./volumes/weaviate:/var/lib/weaviate:z
     environment:
       # The Weaviate configurations
       # You can refer to the [Weaviate](https://weaviate.io/developers/weaviate/config-refs/env-vars) documentation for more information.
@@ -502,7 +512,7 @@ services:
       - qdrant
     restart: always
     volumes:
-      - ./volumes/qdrant:/qdrant/storage
+      - ./volumes/qdrant:/qdrant/storage:z
     environment:
       QDRANT_API_KEY: ${QDRANT_API_KEY:-difyai123456}
 
@@ -522,7 +532,7 @@ services:
       PGDATA: ${PGVECTOR_PGDATA:-/var/lib/postgresql/data/pgdata}
     volumes:
       # - ./volumes/pgvector/data:/var/lib/postgresql/data
-      - pgvector_data:/var/lib/postgresql/data
+      - pgvector_data:/var/lib/postgresql/data:z
     healthcheck:
       test: ["CMD", "pg_isready"]
       interval: 1s
@@ -558,7 +568,7 @@ services:
       - chroma
     restart: always
     volumes:
-      - ./volumes/chroma:/chroma/chroma
+      - ./volumes/chroma:/chroma/chroma:z
     environment:
       CHROMA_SERVER_AUTHN_CREDENTIALS: ${CHROMA_SERVER_AUTHN_CREDENTIALS:-difyai123456}
       CHROMA_SERVER_AUTHN_PROVIDER: ${CHROMA_SERVER_AUTHN_PROVIDER:-chromadb.auth.token_authn.TokenAuthenticationServerProvider}
@@ -591,7 +601,7 @@ services:
       ETCD_QUOTA_BACKEND_BYTES: ${ETCD_QUOTA_BACKEND_BYTES:-4294967296}
       ETCD_SNAPSHOT_COUNT: ${ETCD_SNAPSHOT_COUNT:-50000}
     volumes:
-      - ./volumes/milvus/etcd:/etcd
+      - ./volumes/milvus/etcd:/etcd:z
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
     healthcheck:
       test: ["CMD", "etcdctl", "endpoint", "health"]
@@ -631,7 +641,7 @@ services:
       MINIO_ADDRESS: ${MINIO_ADDRESS:-minio:9000}
       common.security.authorizationEnabled: ${MILVUS_AUTHORIZATION_ENABLED:-true}
     volumes:
-      - ./volumes/milvus/milvus:/var/lib/milvus
+      - ./volumes/milvus/milvus:/var/lib/milvus:z
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
       interval: 30s
@@ -708,7 +718,7 @@ services:
       - elasticsearch
     restart: always
     volumes:
-      - dify_es01_data:/usr/share/elasticsearch/data
+      - dify_es01_data:/usr/share/elasticsearch/data:z
     environment:
       ELASTIC_PASSWORD: ${ELASTICSEARCH_PASSWORD:-elastic}
       cluster.name: dify-es-cluster
